syntax = "proto3";

package linky;

import 'SegmentMeta.proto';
import 'NodeMeta.proto';

option java_package = "org.superhx.linky.service.proto";
option java_multiple_files = false;
option java_outer_classname = "ControllerServiceProto";

service ControllerService {
    rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
    NodeMeta node = 1;
    repeated SegmentMeta segments = 2;
    message Wal {
        int32 index = 1;
    }
    repeated Wal wals = 3;
}

message HeartbeatResponse {
    int64 epoch = 1;
}
