syntax = "proto3";

package linky;



option java_package = "org.superhx.linky.service.proto";
option java_multiple_files = true;
option java_outer_classname = "NodeMetaProto";

message NodeMeta {
    string address = 1;
}
